style: changed body background colour to black to overcome contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
   background-image: url(../images/brickwall2.webp);
   background-size: cover;
   background-position: center;
+  background-color: black;
 }
 /* ***************************************************************************CSS Code for Home Page */
 
